--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Popeye el marino soy
+title: Pagina de Juanma
 description: A starter template for a Jeykll site using the Just the Docs theme!
 theme: just-the-docs
 
