--- a/_config.yml
+++ b/_config.yml
@@ -5,4 +5,4 @@ theme: just-the-docs
 url: https://juanmaa211.github.io/
 
 aux_links:
-  Template Repository: https://github.com/just-the-docs/just-the-docs-template
+  Template Repository: https://www.youtube.com/channel/UC8rNKrqBxJqL9izOOMxBJtw
