--- a/_config.yml
+++ b/_config.yml
@@ -6,3 +6,10 @@ url: https://juanmaa211.github.io/
 
 aux_links:
   Template Repository: https://www.youtube.com/channel/UC8rNKrqBxJqL9izOOMxBJtw
+  # External navigation links
+nav_external_links:
+  - title: Youtube
+    url: https://www.youtube.com/channel/UC8rNKrqBxJqL9izOOMxBJtw
+    hide_icon: false # set to true to hide the external link icon - defaults to false
+    opens_in_new_tab: false # set to true to open this link in a new tab - defaults to false
+
