--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,6 @@ theme: just-the-docs
 url: https://juanmaa211.github.io/
 
 aux_links:
-  Template Repository: https://www.youtube.com/channel/UC8rNKrqBxJqL9izOOMxBJtw
-
+  Template Repository: https://github.com/just-the-docs/just-the-docs-template
 
 
