--- a/_config.yml
+++ b/_config.yml
@@ -6,5 +6,8 @@ url: https://juanmaa211.github.io/
 
 aux_links:
   Template Repository: https://github.com/just-the-docs/just-the-docs-template
-
-
+nav_external_links:
+  - title: Just the Docs on GitHub
+    url: https://github.com/just-the-docs/just-the-docs
+    hide_icon: false # set to true to hide the external link icon - defaults to false
+    opens_in_new_tab: false # set to true to open this link in a new tab - defaults to false
