--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,6 @@ aux_links:
   Template Repository: https://github.com/just-the-docs/just-the-docs-template
 nav_external_links:
   - title: Youtube
-    url: https://www.youtube.com/channel/UC8rNKrqBxJqL9izOOMxBJtw
+    url: https://youtu.be/_-d6q9QHYxM?si=vPbD8QTTR4S1rKx4
     hide_icon: false # set to true to hide the external link icon - defaults to false
     opens_in_new_tab: false # set to true to open this link in a new tab - defaults to false
