--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 title: Pagina de Juanma
 description: A starter template for a Jeykll site using the Just the Docs theme!
 theme: just-the-docs
+search_enabled: false
 
 url: https://juanmaa211.github.io/
 
