--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Pagina de Juanma
+title: Goleadores 22/23 - 23/24
 description: A starter template for a Jeykll site using the Just the Docs theme!
 theme: just-the-docs
 search_enabled: false
